--- a/.github/workflows/tonkiang_crawler.yml
+++ b/.github/workflows/tonkiang_crawler.yml
@@ -7,7 +7,7 @@ on:
   push:
     branches: [ main ]
     paths:
-      - 'tonkiang_cctv_crawler.py'
+      - 'tonkiang_crawler.py'
 
 jobs:
   crawl-iptv:
