--- a/.github/workflows/tonkiang_crawlerws.yml
+++ b/.github/workflows/tonkiang_crawlerws.yml
@@ -1,89 +1,55 @@
-name: Tonkiang IPTV Crawler
+name: IPTV Crawler Automation
 
 on:
-  workflow_dispatch:
   schedule:
+    # 每天凌晨2点运行一次（UTC时间）
     - cron: '0 2 * * *'
+  workflow_dispatch:  # 允许手动触发
   push:
-    branches: [ main ]
+    分支: [ main ]
     paths:
-      - 'scripts/tonkiang_crawler.py'  # 修改路径
+      - '**.py'
+      - 'requirements.txt'
 
 jobs:
-  crawl-iptv:
+  run-crawler:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    permissions: 
-      contents: write
-      issues: write
     
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.10'
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
+        pip install -r requirements.txt
 
-    - name: Create output directory
-      run: |
-        mkdir -p github  # 建议在项目根目录创建
+    - name: Run IPTV crawler
+      run: python tonkiang_crawlerws.py
+      # 替换 your_crawler_script.py 为您的实际脚本文件名
 
-    - name: Run CCTV crawler
-      id: crawler
-      working-directory: scripts  # 指定工作目录
-      run: |
-        python tonkiang_crawler.py
-      env:
-        GITHUB_ACTIONS: true
-
-    - name: Commit and push results
+    - name: Commit and push if changes
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add github/ysws.m3u
-        git commit -m "Auto-update: CCTV IPTV M3U results $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
-        git push origin HEAD:main || echo "Nothing to push"
+        git commit -m "Auto-update IPTV list - $(date)" || echo "No changes to commit"
+        git push
+      env:
+        # 需要设置GITHUB_TOKEN权限以便推送更改
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Upload results as artifact
+    - name: Upload M3U file as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: cctv-iptv-m3u
-        path: github/ysws.m3u  # 保持路径不变（假设脚本输出到项目根目录的github文件夹）
-
-    - name: Show results summary
-      run: |
-        echo "爬取完成!"
-        echo "总链接数: ${{ steps.crawler.outputs.total_links }}"
-        echo "有效链接: ${{ steps.crawler.outputs.valid_links }}"
-        echo "M3U文件: ${{ steps.crawler.outputs.output_file }}"
-
-    - name: Send notification on success
-      if: success()
-      uses: actions/github-script@v6
-      with:
-        script: |
-          github.rest.issues.create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: "✅ CCTV IPTV爬虫执行成功",
-            body: `CCTV IPTV爬虫成功运行，找到了 ${{ steps.crawler.outputs.valid_links }} 个有效链接。`
-          })
-
-    - name: Send notification on failure
-      if: failure()
-      uses: actions/github-script@v6
-      with:
-        script: |
-          github.rest.issues..create({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: "🚨 CCTV IPTV爬虫执行失败",
-            body: "CCTV IPTV爬虫在最近一次运行中失败，请检查日志。"
-          })
+        name: iptv-playlist
+        path: github/ysws.m3u
+        retention-days: 5
