--- a/.github/workflows/tonkiang_crawler.yml
+++ b/.github/workflows/tonkiang_crawler.yml
@@ -1,85 +1,44 @@
-name: Tonkiang IPTV Crawler
+name: IPTV Crawler
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 2 * * *'
-  push:
-    branches: [ main ]
-    paths:
-      - 'scripts/tonkiang_crawler.py'
+    - cron: '0 0 * * *'  # 每天运行一次
+  workflow_dispatch:  # 允许手动触发
 
 jobs:
   crawl-iptv:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-    permissions: 
-      contents: write
-      issues: write
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-
+      with:
+        persist-credentials: false
+        
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install requests
-
-    - name: Run CCTV crawler
-      id: crawler
-      run: |
-        cd scripts
-        python tonkiang_crawler.py
-      env:
-        GITHUB_ACTIONS: true
-
-    - name: Commit and push results
+        
+    - name: Run crawler
+      run: python crawler.py
+      
+    - name: Configure Git
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add github/ysws.m3u
-        git commit -m "Auto-update: CCTV IPTV M3U results $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
-        git push origin HEAD:main || echo "Nothing to push"
-
-    - name: Upload results as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: cctv-iptv-m3u
-        path: github/ysws.m3u
-
-    - name: Show results summary
+        
+    - name: Commit and push if changed
       run: |
-        echo "爬取完成!"
-        echo "总链接数: ${{ steps.crawler.outputs.total_links }}"
-        echo "有效链接: ${{ steps.crawler.outputs.valid_links }}"
-        echo "M3U文件: ${{ steps.crawler.outputs.output_file }}"
-
-    - name: Send notification on success
-      if: success()
-      uses: actions/github-script@v5
-      with:
-        script: |
-          await github.rest.issues.create({  # 添加 .rest 并添加 await
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: "✅ CCTV IPTV爬虫执行成功",
-            body: "CCTV IPTV爬虫成功运行，找到了 " + process.env.VALID_LINKS + " 个有效链接。"
-          })
-
-    - name: Send notification on failure
-      if: failure()
-      uses: actions/github-script@v5
-      with:
-        script: |
-          await github.rest.issues.create({  # 添加 .rest 并添加 await
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: "🚨 CCTV IPTV爬虫执行失败",
-            body: "CCTV IPTV爬虫在最近一次运行中失败，请检查日志。"
-          })
+        if [ -n "$(git status --porcelain)" ]; then
+          git add github/ysws.m3u
+          git commit -m "Update IPTV list - $(date)"
+          git push
+        else
+          echo "No changes to commit"
+        fi
