--- a/.github/workflows/tonkiang_crawlerws.yml
+++ b/.github/workflows/tonkiang_crawlerws.yml
@@ -1,55 +1,79 @@
-name: WSTV Crawler
+name: WSTV Crawler 
 
 on:
   schedule:
-    # 每天凌晨2点运行一次（UTC时间）
-    - cron: '0 2 * * *'
-  workflow_dispatch:  # 允许手动触发
-  push:
-    分支: [ main ]
-    paths:
-      - '**.py'
-      - 'requirements.txt'
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
-  run-crawler:
+  crawl-iptv:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: write
+      issues: write
+
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
-        cache: 'pip'
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install requests
 
-    - name: Run IPTV crawler
-      run: python tonkiang_crawlerws.py
-      # 替换 your_crawler_script.py 为您的实际脚本文件名
+    - name: Create output directory
+      run: mkdir -p output  # 新增目录创建步骤
 
-    - name: Commit and push if changes
+    - name: Run crawler
+      id: crawler
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add github/ysws.m3u
-        git commit -m "Auto-update IPTV list - $(date)" || echo "No changes to commit"
-        git push
+        python scripts/tonkiang_crawler.py
       env:
-        # 需要设置GITHUB_TOKEN权限以便推送更改
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_ACTIONS: true
+        OUTPUT_DIR: "output"  # 新增环境变量传递输出目录
 
-    - name: Upload M3U file as artifact
-      uses: actions/upload-artifact@v4
+    - name: Configure Git
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+
+    - name: Commit and push if changed
+      run: |
+        if [ -f "output/ysws.m3u" ]; then  # 修改文件路径
+          git add output/ysws.m3u         # 修改添加路径
+          git commit -m "Update IPTV list - $(date +'%Y-%m-%d %H:%M')"
+          git push origin HEAD:main
+        else
+          echo "M3U文件未生成，请检查爬虫日志"
+          exit 1
+        fi
+
+    - name: Send notification on success
+      if: success()
+      uses: actions/github-script@v5
       with:
-        name: iptv-playlist
-        path: github/ysws.m3u
-        retention-days: 5
+        script: |
+          await github.rest.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "✅ IPTV列表更新成功",
+            body: `成功更新IPTV列表，包含 ${process.env.VALID_LINKS} 个有效链接`
+          })
+      env:
+        VALID_LINKS: ${{ steps.crawler.outputs.valid_links }}
+
+    - name: Send notification on failure
+      if: failure()
+      uses: actions/github-script@v5
+      with:
+        script: |
+          await github.rest.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "🚨 IPTV列表更新失败",
+            body: "请检查[工作流日志](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+          })
