--- a/.github/workflows/tonkiang_crawler.yml
+++ b/.github/workflows/tonkiang_crawler.yml
@@ -1,4 +1,4 @@
-name: CCTV Crawler 
+name: CCTV Crawler
 
 on:
   schedule:
@@ -17,6 +17,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
+
+    - name: Configure Git
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -38,52 +43,33 @@ jobs:
         GITHUB_ACTIONS: true
         OUTPUT_DIR: "output"
 
-    - name: Configure Git
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action"
-
-    - name: Force sync with remote
-      run: |
-        git fetch origin main
-        git reset --hard origin/main
-        git clean -fdx
-
     - name: Check file changes
       id: check_changes
       run: |
         if [ -f "output/ysws.m3u" ]; then
-          # 生成新文件哈希
-          NEW_HASH=$(md5sum output/ysws.m3u | awk '{ print $1 }')
+          # 添加文件到暂存区以便比较
+          git add output/ysws.m3u
           
-          # 获取远程文件哈希（如果存在）
-          if git show main:output/ysws.m3u >/dev/null 2>&1; then
-            REMOTE_HASH=$(git show main:output/ysws.m3u | md5sum | awk '{ print $1 }')
+          # 检测工作区变化
+          if git diff --cached --quiet; then
+            echo "文件内容未变化，跳过提交"
           else
-            REMOTE_HASH="null"
-          fi
-
-          # 比较哈希值
-          if [ "$NEW_HASH" != "$REMOTE_HASH" ]; then
             echo "::set-output name=has_changes::true"
             echo "检测到文件变化，准备提交..."
-          else
-            echo "文件内容未变化，跳过提交"
           fi
         else
           echo "M3U文件未生成"
           exit 1
         fi
 
-    - name: Commit and force push if changed
+    - name: Commit and push if changed
       if: steps.check_changes.outputs.has_changes == 'true'
       run: |
-        git add output/ysws.m3u
         git commit -m "Update IPTV list - $(date +'%Y-%m-%d %H:%M')"
-        git push --force-with-lease origin main
+        git push origin main
 
     - name: Send notification on success
-      if: success()
+      if: success() && steps.check_changes.outputs.has_changes == 'true'
       uses: actions/github-script@v5
       with:
         script: |
