--- a/.github/workflows/tonkiang_crawler.yml
+++ b/.github/workflows/tonkiang_crawler.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -37,13 +39,26 @@ jobs:
       env:
         GITHUB_ACTIONS: true
 
+    - name: Check if file changed
+      id: check_changes
+      run: |
+        if git diff --name-only --exit-code output/ysws.m3u; then
+          echo "changes_detected=false" >> $GITHUB_OUTPUT
+          echo "没有检测到文件变化"
+        else
+          echo "changes_detected=true" >> $GITHUB_OUTPUT
+          echo "检测到文件变化"
+          git status
+        fi
+
     - name: Commit and push results
+      if: steps.check_changes.outputs.changes_detected == 'true'
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add output/ysws.m3u
-        git commit -m "Auto-update: WS TV M3U results $(date +'%Y-%m-%d %H:%M')" || echo "No changes to commit"
-        git push origin HEAD:main || echo "Nothing to push"
+        git commit -m "Auto-update: CCTV M3U results $(date +'%Y-%m-%d %H:%M')"
+        git push
 
     - name: Upload results as artifact
       uses: actions/upload-artifact@v4
